--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/NewsDetail.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/NewsDetail.cshtml
@@ -97,10 +97,10 @@
                 html='<div class="GG_Box ">'
 	  +'<a href="'+item.TransferUrl+'">'
     	+'<h3 class="GG_B1Tit">'+item.Title+'</h3>'
-       + ' <div class="newstime">'
-        	+'<span>'+item.Company+'</span> <span>'+item.TimeStr+'</span>'
-          +  '<span>'+item.CommentsNumber+'<i class="icon-comment"></i> </span>'
-       + '</div>'
+       //+ ' <div class="newstime">'
+       // 	+'<span>'+item.Company+'</span> <span>'+item.TimeStr+'</span>'
+       //   +  '<span>'+item.CommentsNumber+'<i class="icon-comment"></i> </span>'
+       //+ '</div>'
          +'</a>'
             +'</div>'
 
@@ -117,10 +117,10 @@
 	+'<a href="'+item.TransferUrl+'">'
     	+'<div class="GG_B2Left f-l">'
         	+'<h3 class="GG_B1Tit">'+item.Title+'</h3>'
-           + ' <div class="newstime">'
-        	+'<span>'+item.Company+'</span> <span>'+item.TimeStr+'</span>'
-          +  '<span>'+item.CommentsNumber+'<i class="icon-comment"></i> </span>'
-       + '</div>'
+       //    + ' <div class="newstime">'
+       // 	+'<span>'+item.Company+'</span> <span>'+item.TimeStr+'</span>'
+       //   +  '<span>'+item.CommentsNumber+'<i class="icon-comment"></i> </span>'
+       //+ '</div>'
        + '</div>'
     	+'<div class="GG_B2Right">'+img+'</div>'
     +'</a>'
@@ -137,10 +137,10 @@
 	+'<a href="'+item.TransferUrl+'">'
     	+'<h3 class="GG_B1Tit">'+item.Title+'</h3>'
        + '<div class="GG_B4Tu">'+img+'</div>'
-        + ' <div class="newstime">'
-        	+'<span>'+item.Company+'</span> <span>'+item.TimeStr+'</span>'
-          +  '<span>'+item.CommentsNumber+'<i class="icon-comment"></i> </span>'
-       + '</div>'
+       // + ' <div class="newstime">'
+       // 	+'<span>'+item.Company+'</span> <span>'+item.TimeStr+'</span>'
+       //   +  '<span>'+item.CommentsNumber+'<i class="icon-comment"></i> </span>'
+       //+ '</div>'
    + '</a>'
 +'</div>'
 
@@ -163,10 +163,10 @@
             + '<div style="clear:both;"></div>'
         + '</ul>'
 
-         + ' <div class="newstime">'
-        	+'<span>'+item.Company+'</span> <span>'+item.TimeStr+'</span>'
-          +  '<span>'+item.CommentsNumber+'<i class="icon-comment"></i> </span>'
-       + '</div>'
+       //  + ' <div class="newstime">'
+       // 	+'<span>'+item.Company+'</span> <span>'+item.TimeStr+'</span>'
+       //   +  '<span>'+item.CommentsNumber+'<i class="icon-comment"></i> </span>'
+       //+ '</div>'
     + '</a>'
 + '</div>'
             }else if(item.ThumbStyle==4)
