--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/NewsGalleryCategoryList.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/NewsGalleryCategoryList.cshtml
@@ -86,11 +86,11 @@
                                         //无图
                                         <a href="@ad.TransferUrl">
                                             <h3 class="GG_B1Tit">@ad.Title</h3>
-                                            <div class="newstime">
+                                            @*<div class="newstime">
                                                 <span>@ad.Company</span>
                                                 <span>@ad.TimeStr</span>
                                                 <span>@ad.CommentsNumber<i class="icon-comment"></i></span>
-                                            </div>
+                                            </div>*@
                                         </a>
                                     }
                                     else if (ad.ThumbStyle == 1)
@@ -99,11 +99,11 @@
                                         <a href="@ad.TransferUrl">
                                             <div class="GG_B2Left f-l">
                                                 <h3 class="GG_B1Tit">@ad.Title</h3>
-                                                <div class="newstime">
+                                                @*<div class="newstime">
                                                     <span>@ad.Company</span>
                                                     <span>@ad.TimeStr</span>
                                                     <span>@ad.CommentsNumber<i class="icon-comment"></i></span>
-                                                </div>
+                                                </div>*@
                                             </div>
                                             <div class="GG_B2Right">
                                                 @if (ad.ThumbList.Count > 0)
@@ -126,11 +126,11 @@
                                                 }
 
                                             </div>
-                                            <div class="newstime">
+                                            @*<div class="newstime">
                                                 <span>@ad.Company</span>
                                                 <span>@ad.TimeStr</span>
                                                 <span>@ad.CommentsNumber<i class="icon-comment"></i></span>
-                                            </div>
+                                            </div>*@
                                         </a>
                                     }
                                     else if (ad.ThumbStyle == 3)
@@ -146,11 +146,11 @@
                                                 <div style="clear:both;"></div>
                                             </ul>
 
-                                            <div class="newstime">
+                                            @*<div class="newstime">
                                                 <span>@ad.Company</span>
                                                 <span>@ad.TimeStr</span>
                                                 <span>@ad.CommentsNumber<i class="icon-comment"></i></span>
-                                            </div>
+                                            </div>*@
                                         </a>
                                     }
                                     else if (ad.ThumbStyle == 4)
@@ -177,11 +177,11 @@
                                         //无图
                                         <a href="@ad.TransferUrl">
                                             <h3 class="GG_B1Tit">@ad.Title</h3>
-                                            <div class="newstime">
+                                            @*<div class="newstime">
                                                 <span>@ad.Company</span>
                                                 <span>@ad.TimeStr</span>
                                                 <span>@ad.CommentsNumber<i class="icon-comment"></i></span>
-                                            </div>
+                                            </div>*@
                                         </a>
                                     }
                                     else if (ad.ThumbStyle == 1)
@@ -190,11 +190,11 @@
                                         <a href="@ad.TransferUrl">
                                             <div class="GG_B2Left f-l">
                                                 <h3 class="GG_B1Tit">@ad.Title</h3>
-                                                <div class="newstime">
+                                                @*<div class="newstime">
                                                     <span>@ad.Company</span>
                                                     <span>@ad.TimeStr</span>
                                                     <span>@ad.CommentsNumber<i class="icon-comment"></i></span>
-                                                </div>
+                                                </div>*@
                                             </div>
                                             <div class="GG_B2Right">
                                                 @if (ad.ThumbList.Count > 0)
@@ -217,11 +217,11 @@
                                                 }
 
                                             </div>
-                                            <div class="newstime">
+                                            @*<div class="newstime">
                                                 <span>@ad.Company</span>
                                                 <span>@ad.TimeStr</span>
                                                 <span>@ad.CommentsNumber<i class="icon-comment"></i></span>
-                                            </div>
+                                            </div>*@
                                         </a>
                                     }
                                     else if (ad.ThumbStyle == 3)
@@ -236,11 +236,11 @@
 
                                                 <div style="clear:both;"></div>
                                             </ul>
-                                            <div class="newstime">
+                                            @*<div class="newstime">
                                                 <span>@ad.Company</span>
                                                 <span>@ad.TimeStr</span>
                                                 <span>@ad.CommentsNumber<i class="icon-comment"></i></span>
-                                            </div>
+                                            </div>*@
                                         </a>
                                     }
                                     else if (ad.ThumbStyle == 4)
@@ -267,11 +267,11 @@
                                         //无图
                                         <a href="@ad.TransferUrl">
                                             <h3 class="GG_B1Tit">@ad.Title</h3>
-                                            <div class="newstime">
+                                            @*<div class="newstime">
                                                 <span>@ad.Company</span>
                                                 <span>@ad.TimeStr</span>
                                                 <span>@ad.CommentsNumber<i class="icon-comment"></i></span>
-                                            </div>
+                                            </div>*@
                                         </a>
                                     }
                                     else if (ad.ThumbStyle == 1)
@@ -280,11 +280,11 @@
                                         <a href="@ad.TransferUrl">
                                             <div class="GG_B2Left f-l">
                                                 <h3 class="GG_B1Tit">@ad.Title</h3>
-                                                <div class="newstime">
+                                                @*<div class="newstime">
                                                     <span>@ad.Company</span>
                                                     <span>@ad.TimeStr</span>
                                                     <span>@ad.CommentsNumber<i class="icon-comment"></i></span>
-                                                </div>
+                                                </div>*@
                                             </div>
                                             <div class="GG_B2Right">
                                                 @if (ad.ThumbList.Count > 0)
@@ -307,11 +307,11 @@
                                                 }
 
                                             </div>
-                                            <div class="newstime">
+                                            @*<div class="newstime">
                                                 <span>@ad.Company</span>
                                                 <span>@ad.TimeStr</span>
                                                 <span>@ad.CommentsNumber<i class="icon-comment"></i></span>
-                                            </div>
+                                            </div>*@
                                         </a>
                                     }
                                     else if (ad.ThumbStyle == 3)
@@ -327,11 +327,11 @@
                                                 <div style="clear:both;"></div>
                                             </ul>
 
-                                            <div class="newstime">
+                                            @*<div class="newstime">
                                                 <span>@ad.Company</span>
                                                 <span>@ad.TimeStr</span>
                                                 <span>@ad.CommentsNumber<i class="icon-comment"></i></span>
-                                            </div>
+                                            </div>*@
                                         </a>
                                     }
                                     else if (ad.ThumbStyle == 4)
@@ -357,11 +357,11 @@
                                         //无图
                                         <a href="@ad.TransferUrl">
                                             <h3 class="GG_B1Tit">@ad.Title</h3>
-                                            <div class="newstime">
+                                            @*<div class="newstime">
                                                 <span>@ad.Company</span>
                                                 <span>@ad.TimeStr</span>
                                                 <span>@ad.CommentsNumber<i class="icon-comment"></i></span>
-                                            </div>
+                                            </div>*@
                                         </a>
                                     }
                                     else if (ad.ThumbStyle == 1)
@@ -370,11 +370,11 @@
                                         <a href="@ad.TransferUrl">
                                             <div class="GG_B2Left f-l">
                                                 <h3 class="GG_B1Tit">@ad.Title</h3>
-                                                <div class="newstime">
+                                                @*<div class="newstime">
                                                     <span>@ad.Company</span>
                                                     <span>@ad.TimeStr</span>
                                                     <span>@ad.CommentsNumber<i class="icon-comment"></i></span>
-                                                </div>
+                                                </div>*@
                                             </div>
                                             <div class="GG_B2Right">
                                                 @if (ad.ThumbList.Count > 0)
@@ -397,11 +397,11 @@
                                                 }
 
                                             </div>
-                                            <div class="newstime">
+                                            @*<div class="newstime">
                                                 <span>@ad.Company</span>
                                                 <span>@ad.TimeStr</span>
                                                 <span>@ad.CommentsNumber<i class="icon-comment"></i></span>
-                                            </div>
+                                            </div>*@
                                         </a>
                                     }
                                     else if (ad.ThumbStyle == 3)
@@ -417,11 +417,11 @@
                                                 <div style="clear:both;"></div>
                                             </ul>
 
-                                            <div class="newstime">
+                                            @*<div class="newstime">
                                                 <span>@ad.Company</span>
                                                 <span>@ad.TimeStr</span>
                                                 <span>@ad.CommentsNumber<i class="icon-comment"></i></span>
-                                            </div>
+                                            </div>*@
                                         </a>
                                     }
                                     else if (ad.ThumbStyle == 4)
