--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/LastPlay.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/LastPlay.cshtml
@@ -76,7 +76,7 @@
             <tr>
                 <td align="center" valign="middle">
                     <p class="Forecast_Ptit">@(lastBettingRecord.Issue)期</p>
-                    <p class="Forecast_Ptit">@lastBettingRecord.SubTime.ToString("yyyy-MM-dd")</p>
+                    @*<p class="Forecast_Ptit">@lastBettingRecord.SubTime.ToString("yyyy-MM-dd")</p>*@
                 </td>
                 <td align="center" valign="middle">
                     <p class="Forecast_Pred">@ViewBag.Time</p>
