--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/PlanData.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/PlanData.cshtml
@@ -43,7 +43,7 @@
 
                         </div>
                         <div>
-                            <font>@record.SubTime.ToString("HH:mm")</font>
+                            <font>@record.SubTime.ToString("MM-dd HH:mm")</font>
                         </div>
                     </th>
                     <th colspan="3" scope="col" align="left">
