--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/List/Integral.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/List/Integral.cshtml
@@ -86,7 +86,7 @@
                             + ' <div class="Ranking_Blogotu">'
                             + '  <a href="/Personal/UserCenter/' + value.UserId + '"><img src="' + (value.Avater == null ? '/images/default_avater.png' : value.Avater) + '"></a>  </div>'
                             + '   </td> <td align="left" valign="middle">'
-                            + '   <p class="Ysfont"><a href="/Personal/UserCenter/' + value.UserId + '">' + value.NickName + '</a></p>'
+                            + '   <p class="' + GetYsfont(value.Rank) + '"><a href="/Personal/UserCenter/' + value.UserId + '">' + value.NickName + '</a></p>'
                             + ' </td> <td width="25%" align="center" valign="middle"><span class="Ds_money Jf_money">' + value.Score + '</span></td>'
                             + ' </tr> '
 
@@ -105,7 +105,7 @@
                         + ' <div class="Ranking_Blogotu">'
                         + '  <a href="/Personal/UserCenter/' + value.UserId + '"><img src="' + (value.Avater == null ? '/images/default_avater.png' : value.Avater) + '"></a>  </div>'
                         + '   </td> <td align="left" valign="middle">'
-                        + '   <p class="Ysfont"><a href="/Personal/UserCenter/' + value.UserId + '">' + value.NickName + '</a></p>'
+                        + '   <p class="' + GetYsfont(value.Rank) + '"><a href="/Personal/UserCenter/' + value.UserId + '">' + value.NickName + '</a></p>'
                         + ' </td> <td width="25%" align="center" valign="middle"><span class="Ds_money Jf_money">' + value.Score + '</span></td>'
                         + ' </tr> '
 
