--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/TypeList.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/TypeList.cshtml
@@ -330,10 +330,10 @@
                 html = '<div class="GG_Box  GG_Box1 GG_Box2">'
 	  + '<a href="' + item.TransferUrl + '">'
     	+ '<h3 class="GG_B1Tit">' + item.Title + '</h3>'
-       + '<div class="GG_BbtFont">'
-        	+ '<b>广告</b>'
-          + '<span>' + item.Company + '</span>'
-       + '</div>'
+       //+ '<div class="GG_BbtFont">'
+       // 	+ '<b>广告</b>'
+       //   + '<span>' + item.Company + '</span>'
+       //+ '</div>'
          + '</a>'
             + '</div>'
 
@@ -348,10 +348,10 @@
 	+ '<a href="' + item.TransferUrl + '">'
     	+ '<div class="GG_B2Left f-l">'
         	+ '<h3 class="GG_B1Tit">' + item.Title + '</h3>'
-          + '<div class="GG_BbtFont">'
-            + ' <b>广告</b>'
-           + ' <span>' + item.Company + '</span>'
-          + '</div>'
+          //+ '<div class="GG_BbtFont">'
+          //  + ' <b>广告</b>'
+          // + ' <span>' + item.Company + '</span>'
+          //+ '</div>'
        + '</div>'
     	+ '<div class="GG_B2Right">' + img + '</div>'
     + '</a>'
@@ -366,10 +366,10 @@
 	+ '<a href="' + item.TransferUrl + '">'
     	+ '<h3 class="GG_B1Tit">' + item.Title + '</h3>'
        + '<div class="GG_B4Tu">' + img + '</div>'
-       + '<div class="GG_BbtFont">'
-      + '<b>广告</b>'
-      + '<span>' + item.Company + '</span>'
-     + '</div>'
+     //  + '<div class="GG_BbtFont">'
+     // + '<b>广告</b>'
+     // + '<span>' + item.Company + '</span>'
+     //+ '</div>'
    + '</a>'
 + '</div>'
 
@@ -389,10 +389,10 @@
             + '<div style="clear:both;"></div>'
         + '</ul>'
 
-        + '<div class="GG_BbtFont">'
-        	+ '<b>广告</b>'
-            + '<span>' + item.Company + '</span>'
-        + '</div>'
+        //+ '<div class="GG_BbtFont">'
+        //	+ '<b>广告</b>'
+        //    + '<span>' + item.Company + '</span>'
+        //+ '</div>'
     + '</a>'
 + '</div>'
             } else if (item.ThumbStyle == 4) {
