--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/Notice.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/Notice.cshtml
@@ -27,7 +27,7 @@
 <body style="background:#F4F4F5; overflow-y: hidden;">
 
     <header class="hjc_header">
-        <a href="javascript:history.go(-1);" class="hjc_back"></a>
+        <a href="/Personal/Index" class="hjc_back"></a>
         <a href="javascript:;" class="hjc_logo">消息提醒</a>
     </header>
 
