--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/Look.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/Look.cshtml
@@ -177,7 +177,7 @@
                     @*开奖信息*@
                     <thead>
                         <tr>
-                            <th scope="col" width="20%">
+                            @*<th scope="col" width="20%">
                                 <div>
                                     <span class="Mif_titred"><font>@ViewBag.currentIssue.Substring(4)</font>期</span>
                                 </div>
@@ -195,7 +195,7 @@
 
 
                                 </div>
-                            </th>
+                            </th>*@
                         </tr>
                     </thead>
 
