--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/List/ExpertData.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/List/ExpertData.cshtml
@@ -1,4 +1,5 @@
 ﻿@using C8.Lottery.Model
+@using C8.Lottery.Public
 @{
     List<RankingList> dailyList = ViewBag.DailyList;
     List<RankingList> weekList = ViewBag.WeekList;
@@ -9,6 +10,7 @@
     RankingList userWeekInfo = ViewBag.UserWeekInfo;
     RankingList userMonthInfo = ViewBag.UserMonthInfo;
     RankingList userTotalInfo = ViewBag.UserTotalInfo;
+    
 }
 
 
@@ -17,6 +19,7 @@
 
         @if (dailyList != null && dailyList.Count > 0)
         {
+           
             <table width="100%" border="0" class="Ranking_table1">
                 <tbody>
                     @foreach (var item in dailyList)
@@ -56,9 +59,12 @@
                                 </div>
                             </td>
                             <td align="left" valign="middle">
-                                <p class="Ysfont">
-                                    <a href="/Plan/PlayRecord/@item.LType?uid=@item.UserId&type=1">@item.NickName</a>
-                                </p>
+                               
+                         
+
+                             <p class="@Tool.GetYsfont(item.Rank)">
+                             <a href="/Plan/PlayRecord/@item.LType?uid=@item.UserId&type=1">@item.NickName</a>
+                             </p>
                             </td>
                             <td width="25%" align="center" valign="middle"><span class="Ds_money Jf_money">@item.Score</span></td>
                         </tr>
@@ -117,7 +123,7 @@
                                 </div>
                             </td>
                             <td align="left" valign="middle">
-                                <p class="Ysfont">
+                                <p class="@Tool.GetYsfont(item.Rank)">
                                     <a href="/Plan/PlayRecord/@item.LType?uid=@item.UserId&type=1">@item.NickName</a>
                                 </p>
                             </td>
@@ -178,7 +184,7 @@
                                 </div>
                             </td>
                             <td align="left" valign="middle">
-                                <p class="Ysfont">
+                                <p class="@Tool.GetYsfont(item.Rank)">
                                     <a href="/Plan/PlayRecord/@item.LType?uid=@item.UserId&type=1">@item.NickName</a>
                                 </p>
                             </td>
@@ -240,7 +246,7 @@
                                 </div>
                             </td>
                             <td align="left" valign="middle">
-                                <p class="Ysfont">
+                                <p class="@Tool.GetYsfont(item.Rank)">
                                     <a href="/Plan/PlayRecord/@item.LType?uid=@item.UserId&type=1">@item.NickName</a>
                                 </p>
                             </td>
