--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/InvitationReg.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/InvitationReg.cshtml
@@ -69,7 +69,7 @@
                 </div>
                 <div class="invitation-commision-box">
                     累计奖励
-                    <p><span>@Model.Coin</span>金币 &nbsp;<span>0</span>查看券</p>
+                    <p><span>@Model.Coin</span>金币 &nbsp;<span>@Model.Coupon</span>查看券</p>
                 </div>
                 <div class="clearfix"></div>
             </div>
